--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-PINECONE_API_KEY= "Your_Pinecone_API_key"
-COHERE_API_KEY="Your_Cohere_API_key"
+PINECONE_API_KEY= "970ddc50-54d6-4224-ac93-371be3fbe05b"
+COHERE_API_KEY="ZDSchTDXMEh1SoyY6qSLYtqB6RcZ425BBBOpVlAy"
